fix modal z-index

--- a/cash-register/src/assets/sass/layout/_variables.scss
+++ b/cash-register/src/assets/sass/layout/_variables.scss
@@ -47,7 +47,7 @@ $toolbar-config: (
 
 // Aside
 $aside-config: (
-	z-index: 98,
+	z-index: 901,
 	// Aside's z-index property
 	transition-speed: 0.3s,
 	// transition speed
